
Initial (VERY incomplete) work on "abiscan," a tool for scanning
platform ABI's, cataloging binary-level dependencies, and gauging
binary compatibility.
----------------------------------------------------------------------
Mon Nov  7 14:09:45 2005                        Michael Jennings (mej)

Stupid typos.
----------------------------------------------------------------------
Fri Dec 16 17:44:52 2005                        Michael Jennings (mej)

Fixed web template and added horde3 template.
----------------------------------------------------------------------
Fri Feb  3 14:49:44 2006                        Michael Jennings (mej)

Allow for chroot jail imaging info on the command line and in
non-parallel builds.

Use /bin/rpm from chroot jail whenever possible in case the jail's
version doesn't match the host's version.

Allow URL's in parameters passed to srctool (mzimport, mzmerge, etc.)
----------------------------------------------------------------------
Thu Feb 16 14:10:03 2006                        Michael Jennings (mej)

Added data object introspection routine.
----------------------------------------------------------------------
Tue Mar  7 06:22:48 2006                        Michael Jennings (mej)

Only handle URL's where appropriate.

Allow for merge file type specification along with URL for mzmerge.
----------------------------------------------------------------------
Tue Mar  7 07:10:04 2006                        Michael Jennings (mej)

Add routine for file uploads via POST.  Still needs debugging.
----------------------------------------------------------------------
Mon Mar 13 23:22:23 2006                        Michael Jennings (mej)

Allow POST requests to be redirected.
----------------------------------------------------------------------
Mon Mar 13 22:24:02 2006                        Michael Jennings (mej)

Support cookies when uploading/downloading.
----------------------------------------------------------------------