@@ -912,3 +912,8 @@ Mon Mar 13 22:24:02 2006                        Michael Jennings (mej)
 
 Support cookies when uploading/downloading.
 ----------------------------------------------------------------------
+Wed Mar 15 00:31:28 2006                        Michael Jennings (mej)
+
+If somebody (like me) mistakenly specifies a subversion repository
+with -D to mzget, don't crap out.  Do the right thing.
+----------------------------------------------------------------------
